# ai-algo

./: .gitignore  README.md  demo.ipynb  pyproject.toml
algos/: 1-LinearRegression.ipynb  10-XGBoost.ipynb  11-LightGBM.ipynb  12-CatBoost.ipynb  13-SVM.ipynb  14-NB.ipynb  15-KKNN.ipynb  16-PCA.ipynb  17-ICA.ipynb  18-LDA.ipynb  19-t-t-SNE.ipynb  2-LogicR.ipynb  20-GMM.ipynb  21-CA.ipynb  22-KK-means.ipynb  23-DBSCAN.ipynb  24-HDBSCAN.ipynb  25-HC.ipynb  26-GAN.ipynb  27-DCGAN.ipynb  28-WGANWassersteinGAN.ipynb  29-StyleGAN.ipynb  30-CycleGAN.ipynb  31-VAE.ipynb  32-GPT.ipynb  33-BERT.ipynb  34-Transformer.ipynb  35-LSTM.ipynb  36-GRU.ipynb  37-RNN.ipynb  38-CNN.ipynb  39-AlexNet.ipynb  4-Lasso.ipynb  40-VGG.ipynb  41-GoogLeNet.ipynb  42-ResNet.ipynb  43-MobileNet.ipynb  44-EfficientNet.ipynb  45-Inception.ipynb  46-DeepDream.ipynb  (+14 more)
papers/: main.synctex(busy)
