[tool.poetry]
name = "ai-algo"
version = "0.1.0"
description = ""
authors = ["mikeshinoda <53910940+desonglll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
catboost = "^1.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
