[tool.poetry]
name = "ai-algo"
version = "0.1.0"
description = ""
authors = ["mikeshinoda <53910940+desonglll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
catboost = "^1.2.7"
hdbscan = "^0.8.39"
scipy = "^1.14.1"
tensorflow = "^2.17.0"
imageio = "^2.36.0"
tensorflow-datasets = "^4.9.6"
datasets = "^3.0.1"
torch = "^2.4.1"
transformers = "^4.45.2"
tf-keras = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
